# State-Base

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
Algorithm/: CMakeLists.txt
common/: CMakeLists.txt
common/include/: global_context.h  message.h  mydb.h  sysconfig.h
common/src/: message.cpp  mydb.cpp
config/: config.yaml  setting.ini
lib/: libyaml-cpp.so.0.8.0
src/: CMakeLists.md
state/: CMakeLists.txt
state/include/: state_base.h  state_begin.h  state_machine.h  state_types.h
state/src/: state_base.cpp  state_begin.cpp  state_machine.cpp
thread/: CMakeLists.txt
thread/include/: thread_audio.h  thread_base.h  thread_camera.h
thread/src/: thread_audio.cpp  thread_camera.cpp
